fixing borders line in task 3

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html>
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles/3-common.css">
@@ -8,7 +8,6 @@
 
 <body>
     <header>
-        <link href="images/logo.png"></link>
     </header>
     <footer>
         <p>Best School</p>
