--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -18,25 +18,28 @@
                 <h3>Location</h3>
                 <h4>Abia, Ribers...</h4>
                 <ul class="popover">
-                    <li><h2>Abia</h2>
-                      <ul>
-                        <li>Aba</li>
-                        <li>Umuahia</li>
-                      </ul>
+                    <li>
+                        <h2>Abia</h2>
+                        <ul>
+                            <li>Aba</li>
+                            <li>Umuahia</li>
+                        </ul>
                     </li>
-                    <li><h2>Rivers</h2>
-                      <ul>
-                        <li>Port Harcourt</li>
-                        <li>Borokiri</li>
-                      </ul>
-                  </ul>
+                    <li>
+                        <h2>Rivers</h2>
+                        <ul>
+                            <li>Port Harcourt</li>
+                            <li>Borokiri</li>
+                        </ul>
+                </ul>
             </div>
             <div class="amenities">
                 <h3>Amentities</h3>
                 <h4>Electricity, Water supply...</h4>
                 <ul class="popover">
                     <li>Electricity</li>
-                    <li>Water supply<li>
+                    <li>Water supply
+                    <li>
                     <li>Dry cleaner</li>
                     <li>Kitchen</li>
                 </ul>
@@ -47,13 +50,18 @@
             <h1>Places</h1>
             <article>
                 <h2>My home</h2>
+            </article>
+            <article>
                 <h2>Tiny house</h2>
+            </article>
+            <article>
                 <h2>A suite</h2>
             </article>
         </div>
-    </div> 
-        <footer>
-            <p>Best School</p>
-        </footer>
+    </div>
+    <footer>
+        <p>Best School</p>
+    </footer>
 </body>
+
 </html>
